--- a/login/login/App.config
+++ b/login/login/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="azilIP.My.MySettings._16014_DBConnectionString" connectionString="Data Source=31.147.204.119\PISERVER,1433;Initial Catalog=16014_DB;Persist Security Info=True;User ID=16014_User;Password=eY4PSzGY"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
