--- a/login/login/login.vbproj
+++ b/login/login/login.vbproj
@@ -120,6 +120,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>_16014_DBDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="_16014_DBDataSet1.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>_16014_DBDataSet1.xsd</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="..\..\..\azil\azil.resx">
@@ -165,6 +170,17 @@
     </None>
     <None Include="_16014_DBDataSet.xss">
       <DependentUpon>_16014_DBDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="_16014_DBDataSet1.xsc">
+      <DependentUpon>_16014_DBDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="_16014_DBDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>_16014_DBDataSet1.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="_16014_DBDataSet1.xss">
+      <DependentUpon>_16014_DBDataSet1.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
